// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe Incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    product card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductImage Debe de mostrar el componente correctamente con la Imagen personalizado 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
